--- a/web/views/manage/module/Index.html
+++ b/web/views/manage/module/Index.html
@@ -58,7 +58,7 @@
 								<div class="form-group">
 									<input type="text" class="form-control" id="inputEmail3" placeholder="模块名称">
 								</div>
-								<button type="submit" class="btn btn-default olx-glyphicon glyphicon-search olx-glyphicon-btn">查询</button>
+								<button type="button" class="btn btn-default olx-glyphicon glyphicon-search olx-glyphicon-btn">查询</button>
 							</form>
 						</div>
 					</div>
@@ -91,43 +91,43 @@
 						<button class="close" aria-hidden="true" data-dismiss="modal" type="button">×</button>
 						<h4 id="addModalLabel" class="modal-title"><b>新增</b></h4>
 					</div>
-					<form id="addForm" name="AddForm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="add.do">
-						<input type="hidden" id="addForm_PId" name="PId" value="0">
+					<form id="addFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="add.do">
+						<input type="hidden" id="addFrm_PId" name="PId" value="0">
 						<div class="modal-body">
 							<div class="form-group">
-								<label for="addForm_ModuleName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>模块名称</label>
+								<label for="addFrm_ModuleName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>模块名称</label>
 								<div class="col-sm-7">
-									<input type="text" data-olx-type="olx.form.input" data-required="true" class="form-control" id="addForm_ModuleName" name="ModuleName" placeholder="模块名称" data-placement="bottom" data-original-title="请输入正确的格式。" autofocus>
+									<input type="text" data-olx-type="olx.form.input" data-required="true" class="form-control" id="addFrm_ModuleName" name="ModuleName" placeholder="模块名称" data-placement="bottom" data-original-title="请输入正确的格式。" autofocus>
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="addForm_ModuleUrl" class="col-sm-3 control-label">模块地址</label>
+								<label for="addFrm_ModuleUrl" class="col-sm-3 control-label">模块地址</label>
 								<div class="col-sm-7">
-									<input type="text" data-olx-type="olx.form.input" class="form-control" id="addForm_ModuleUrl" name="ModuleUrl" placeholder="模块地址">
+									<input type="text" data-olx-type="olx.form.input" class="form-control" id="addFrm_ModuleUrl" name="ModuleUrl" placeholder="模块地址">
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="addForm_Sort" class="col-sm-3 control-label">排序</label>
+								<label for="addFrm_Sort" class="col-sm-3 control-label">排序</label>
 								<div class="col-sm-7">
-									<input type="text" data-olx-type="olx.form.input" class="form-control" id="addForm_Sort" name="Sort" placeholder="排序">
+									<input type="text" data-olx-type="olx.form.input" class="form-control" id="addFrm_Sort" name="Sort" placeholder="排序">
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="addForm_CreateTime" class="col-sm-3 control-label">创建时间</label>
+								<label for="addFrm_CreateTime" class="col-sm-3 control-label">创建时间</label>
 								<div class="col-sm-7">
-									<div class="input-group date form_date col-md-12" data-date="" data-date-format="yyyy-mm-dd" data-link-field="addForm_CreateTime" data-link-format="yyyy-mm-dd">
+									<div class="input-group date form_date col-md-12" data-date="" data-date-format="yyyy-mm-dd" data-link-field="addFrm_CreateTime" data-link-format="yyyy-mm-dd">
 										<input class="form-control" type="text" value="" readonly placeholder="创建时间">
 										<span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
 										<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
 									</div>
-									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="addForm_CreateTime" name="CreateTime" placeholder="创建时间">
+									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="addFrm_CreateTime" name="CreateTime" placeholder="创建时间">
 								</div>
 							</div>
 						</div>
 						<div class="modal-footer">
 							<button class="btn btn-default" data-dismiss="modal" type="button">关闭</button>
 							<button class="btn btn-warning" type="reset">重置</button>
-							<button id='addForm_btn_submit' class="btn btn-primary" type="button">保存</button>
+							<button id='addFrm_btn_submit' class="btn btn-primary" type="button">保存</button>
 						</div>
 					</form>
 				</div>
@@ -141,43 +141,43 @@
 						<button class="close" aria-hidden="true" data-dismiss="modal" type="button">×</button>
 						<h4 id="editModalLabel" class="modal-title"><b>编辑</b></h4>
 					</div>
-					<form id="editForm" name="EditForm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="edit.do">
-						<input type="hidden" id="editForm_Id" name="Id" value="0">
+					<form id="editFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="edit.do">
+						<input type="hidden" id="editFrm_Id" name="Id" value="0">
 						<div class="modal-body">
 							<div class="form-group">
-								<label for="editForm_ModuleName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>模块名称</label>
+								<label for="editFrm_ModuleName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>模块名称</label>
 								<div class="col-sm-7">
-									<input type="text" data-olx-type="olx.form.input" data-required="true" class="form-control" id="editForm_ModuleName" name="ModuleName" placeholder="模块名称" data-placement="bottom" data-original-title="请输入正确的格式。" autofocus>
+									<input type="text" data-olx-type="olx.form.input" data-required="true" class="form-control" id="editFrm_ModuleName" name="ModuleName" placeholder="模块名称" data-placement="bottom" data-original-title="请输入正确的格式。" autofocus>
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="editForm_ModuleUrl" class="col-sm-3 control-label">模块地址</label>
+								<label for="editFrm_ModuleUrl" class="col-sm-3 control-label">模块地址</label>
 								<div class="col-sm-7">
-									<input type="text" data-olx-type="olx.form.input" class="form-control" id="editForm_ModuleUrl" name="ModuleUrl" placeholder="模块地址">
+									<input type="text" data-olx-type="olx.form.input" class="form-control" id="editFrm_ModuleUrl" name="ModuleUrl" placeholder="模块地址">
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="editForm_Sort" class="col-sm-3 control-label">排序</label>
+								<label for="editFrm_Sort" class="col-sm-3 control-label">排序</label>
 								<div class="col-sm-7">
-									<input type="text" data-olx-type="olx.form.input" class="form-control" id="editForm_Sort" name="Sort" placeholder="排序">
+									<input type="text" data-olx-type="olx.form.input" class="form-control" id="editFrm_Sort" name="Sort" placeholder="排序">
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="editForm_CreateTime" class="col-sm-3 control-label">创建时间</label>
+								<label for="editFrm_CreateTime" class="col-sm-3 control-label">创建时间</label>
 								<div class="col-sm-7">
-									<div class="input-group date form_date col-md-12" data-date="" data-date-format="yyyy-mm-dd" data-link-field="editForm_CreateTime" data-link-format="yyyy-mm-dd">
-										<input class="form-control" id="editForm_shadow_CreateTime" type="text" value="" readonly placeholder="创建时间">
+									<div class="input-group date form_date col-md-12" data-date="" data-date-format="yyyy-mm-dd" data-link-field="editFrm_CreateTime" data-link-format="yyyy-mm-dd">
+										<input class="form-control" id="editFrm_shadow_CreateTime" type="text" value="" readonly placeholder="创建时间">
 										<span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
 										<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
 									</div>
-									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="editForm_CreateTime" placeholder="创建时间">
+									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="editFrm_CreateTime" placeholder="创建时间">
 								</div>
 							</div>
 						</div>
 						<div class="modal-footer">
 							<button class="btn btn-default" data-dismiss="modal" type="button">关闭</button>
 							<button class="btn btn-warning" type="reset">重置</button>
-							<button id='editForm_btn_submit' class="btn btn-primary" type="button">保存</button>
+							<button id='editFrm_btn_submit' class="btn btn-primary" type="button">保存</button>
 						</div>
 					</form>
 				</div>
@@ -273,7 +273,7 @@
 				callback: {
 					beforeClick: function(treeId, treeNode) {
 						var pid = treeNode.id;
-						$('#addForm_PId').val(pid);
+						$('#addFrm_PId').val(pid);
 
 						$("#table1").olxGrid("loadData", [{
 							PId: pid
@@ -318,12 +318,12 @@
 				var checkbox = checkboxs[0];
 				var data = checkbox.data('object');
 
-				$('#editForm_Id').val(vals[0]);
-				$('#editForm_ModuleName').val(data.ModuleName);
-				$('#editForm_ModuleUrl').val(data.ModuleUrl);
-				$('#editForm_Sort').val(data.Sort);
-				$('#editForm_CreateTime').val(data.CreateTime);
-				$('#editForm_shadow_CreateTime').val(data.CreateTime);
+				$('#editFrm_Id').val(vals[0]);
+				$('#editFrm_ModuleName').val(data.ModuleName);
+				$('#editFrm_ModuleUrl').val(data.ModuleUrl);
+				$('#editFrm_Sort').val(data.Sort);
+				$('#editFrm_CreateTime').val(data.CreateTime);
+				$('#editFrm_shadow_CreateTime').val(data.CreateTime);
 			})
 
 			$("#btn_edit").click(function(){
@@ -343,8 +343,8 @@
 				$("#delConfirmModal").modal();
 			});
 
-			$('#addForm_btn_submit').click(function(){
-				$('#addForm').olxForm('submit', function(responseText){
+			$('#addFrm_btn_submit').click(function(){
+				$('#addFrm').olxForm('submit', function(responseText){
 					if(responseText.code){
 						if(300 === responseText.code){
 							top.location.href = '/manage/user/login';
@@ -360,8 +360,8 @@
 				});
 			});
 
-			$('#editForm_btn_submit').click(function(){
-				$('#editForm').olxForm('submit', function(responseText){
+			$('#editFrm_btn_submit').click(function(){
+				$('#editFrm').olxForm('submit', function(responseText){
 					if(responseText.code){
 						if(300 === responseText.code){
 							top.location.href = '/manage/user/login';
