--- a/web/views/manage/role/Index.html
+++ b/web/views/manage/role/Index.html
@@ -9,13 +9,15 @@
 	    <!-- Bootstrap -->
 	    <link rel="stylesheet" type="text/css" href="${cdn}/bootstrap/3.0.3/dist/css/bootstrap.min.css" media="screen">
 	    <link rel="stylesheet" type="text/css" href="${cdn}/bootstrap/3.0.3/dist/css/bootstrap-theme.min.css" media="screen">
+	    <link rel="stylesheet" type="text/css" href="${cdn}/bootstrap-datetimepicker/2.2.0/css/bootstrap-datetimepicker.min.css" media="screen">
+	    <link rel="stylesheet" type="text/css" href="${cdn}/olxjs/1.0.0/css/olx/olx.css" media="screen">
 
 		<link rel="stylesheet" type="text/css" href="${virtualPath}public/manage/css/style.css">
 	</head>
 	<body>
 		<div class="navbar navbar-fixed-top" role="navigation">
 			<ul class="breadcrumb">
-				<li>当前位置：<div class="glyphicon glyphicon-home"></div> <a href="javascript:;" onclick="top.location.href='../index#page/welcome'">首页</a></li>
+				<li>当前位置：<div class="glyphicon glyphicon-home"></div> 首页</li>
 				<li class="active">系统管理</li>
 				<li><a href="javascript:;" onclick="location.reload()">角色管理</a></li>				
 			</ul>
@@ -42,7 +44,7 @@
 								<div class="form-group">
 									<input type="text" class="form-control" id="inputEmail3" placeholder="角色名称">
 								</div>
-								<button type="submit" class="btn btn-default olx-glyphicon glyphicon-search olx-glyphicon-btn">查询</button>
+								<button type="button" class="btn btn-default olx-glyphicon glyphicon-search olx-glyphicon-btn">查询</button>
 							</form>
 						</div>
 					</div>
