--- a/web/views/manage/role/Index.html
+++ b/web/views/manage/role/Index.html
@@ -67,6 +67,72 @@
 			</div>
 		</div>
 
+		<div id="addModal" class="modal fade" aria-hidden="true" aria-labelledby="addModalLabel" role="dialog" tabindex="-1">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button class="close" aria-hidden="true" data-dismiss="modal" type="button">×</button>
+						<h4 id="addModalLabel" class="modal-title"><b>新增</b></h4>
+					</div>
+					<form id="addFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="add.do">
+						<input type="hidden" id="addFrm_PId" name="PId" value="0">
+						<div class="modal-body">
+							<div class="form-group">
+								<label for="addFrm_RoleName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>角色名称</label>
+								<div class="col-sm-7">
+									<input type="text" data-olx-type="olx.form.input" data-required="true" class="form-control" id="addFrm_RoleName" name="RoleName" placeholder="角色名称" data-placement="bottom" data-original-title="请输入正确的格式。" autofocus>
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="addFrm_RoleDesc" class="col-sm-3 control-label">角色描述</label>
+								<div class="col-sm-7">
+									<input type="text" data-olx-type="olx.form.input" class="form-control" id="addFrm_RoleDesc" name="RoleDesc" placeholder="角色描述">
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="addFrm_StartTime" class="col-sm-3 control-label">启用时间</label>
+								<div class="col-sm-7">
+									<div class="input-group date form_date col-md-12" data-date="" data-date-format="yyyy/mm/dd" data-link-field="addFrm_StartTime" data-link-format="yyyy/mm/dd">
+										<input class="form-control" type="text" value="" readonly placeholder="启用时间">
+										<span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+										<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+									</div>
+									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="addFrm_StartTime" name="StartTime" placeholder="启用时间">
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="addFrm_EndTime" class="col-sm-3 control-label">禁用时间</label>
+								<div class="col-sm-7">
+									<div class="input-group date form_date col-md-12" data-date="" data-date-format="yyyy/mm/dd" data-link-field="addFrm_EndTime" data-link-format="yyyy/mm/dd">
+										<input class="form-control" type="text" value="" readonly placeholder="禁用时间">
+										<span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+										<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+									</div>
+									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="addFrm_EndTime" name="EndTime" placeholder="禁用时间">
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="addFrm_CreateTime" class="col-sm-3 control-label">创建时间</label>
+								<div class="col-sm-7">
+									<div class="input-group date form_date col-md-12" data-date="" data-date-format="yyyy/mm/dd" data-link-field="addFrm_CreateTime" data-link-format="yyyy/mm/dd">
+										<input class="form-control" type="text" value="" readonly placeholder="创建时间">
+										<span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+										<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+									</div>
+									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="addFrm_CreateTime" name="CreateTime" placeholder="创建时间">
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<button class="btn btn-default" data-dismiss="modal" type="button">关闭</button>
+							<button class="btn btn-warning" type="reset">重置</button>
+							<button id='addFrm_btn_submit' class="btn btn-primary" type="button">保存</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+
 		<script type="text/javascript" src="${cdn}/jquery/2.0.2/jquery.min.js"></script>
 		<script type="text/javascript" src="${cdn}/bootstrap/3.0.3/dist/js/bootstrap.js"></script>
         <script type="text/javascript" src="${cdn}/underscore/1.5.1/underscore.min.js"></script>
@@ -88,6 +154,23 @@
 			});
 
 			$(function(){
+			});
+
+			$('#addFrm_btn_submit').click(function(){
+				$('#addFrm').olxForm('submit', function(responseText){
+					if(responseText.code){
+						if(300 === responseText.code){
+							top.location.href = '/manage/user/login';
+							return;
+						}
+					}
+
+					if(responseText.success){
+						location.reload();
+					}else{
+						alert(responseText.msg);
+					}
+				});
 			});
 		</script>
 	</body>
