--- a/web/views/manage/role/Index.html
+++ b/web/views/manage/role/Index.html
@@ -75,7 +75,6 @@
 						<h4 id="addModalLabel" class="modal-title"><b>新增</b></h4>
 					</div>
 					<form id="addFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="add.do">
-						<input type="hidden" id="addFrm_PId" name="PId" value="0">
 						<div class="modal-body">
 							<div class="form-group">
 								<label for="addFrm_RoleName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>角色名称</label>
@@ -133,6 +132,124 @@
 			</div>
 		</div>
 
+		<div id="editModal" class="modal fade" aria-hidden="true" aria-labelledby="editModalLabel" role="dialog" tabindex="-1">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button class="close" aria-hidden="true" data-dismiss="modal" type="button">×</button>
+						<h4 id="editModalLabel" class="modal-title"><b>编辑</b></h4>
+					</div>
+					<form id="editFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="edit.do">
+						<input type="hidden" id="editFrm_Id" name="Id" value="0">
+						<div class="modal-body">
+							<div class="form-group">
+								<label for="editFrm_RoleName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>角色名称</label>
+								<div class="col-sm-7">
+									<input type="text" data-olx-type="olx.form.input" data-required="true" class="form-control" id="editFrm_RoleName" name="RoleName" placeholder="角色名称" data-placement="bottom" data-original-title="请输入正确的格式。" autofocus>
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="editFrm_RoleDesc" class="col-sm-3 control-label">角色描述</label>
+								<div class="col-sm-7">
+									<input type="text" data-olx-type="olx.form.input" class="form-control" id="editFrm_RoleDesc" name="RoleDesc" placeholder="角色描述">
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="editFrm_shadow_StartTime" class="col-sm-3 control-label">启用时间</label>
+								<div class="col-sm-7">
+									<div class="input-group date form_date col-md-12" data-date="" data-date-format="yyyy/mm/dd" data-link-field="editFrm_StartTime" data-link-format="yyyy/mm/dd">
+										<input class="form-control" id='editFrm_shadow_StartTime' type="text" value="" readonly placeholder="启用时间">
+										<span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+										<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+									</div>
+									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="editFrm_StartTime" name="StartTime" placeholder="启用时间">
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="editFrm_shadow_EndTime" class="col-sm-3 control-label">禁用时间</label>
+								<div class="col-sm-7">
+									<div class="input-group date form_date col-md-12" data-date="" data-date-format="yyyy/mm/dd" data-link-field="editFrm_EndTime" data-link-format="yyyy/mm/dd">
+										<input class="form-control" id='editFrm_shadow_EndTime' type="text" value="" readonly placeholder="禁用时间">
+										<span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+										<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+									</div>
+									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="editFrm_EndTime" name="EndTime" placeholder="禁用时间">
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="editFrm_shadow_CreateTime" class="col-sm-3 control-label">创建时间</label>
+								<div class="col-sm-7">
+									<div class="input-group date form_date col-md-12" data-date="" data-date-format="yyyy/mm/dd" data-link-field="editFrm_CreateTime" data-link-format="yyyy/mm/dd">
+										<input class="form-control" id='editFrm_shadow_CreateTime' type="text" value="" readonly placeholder="创建时间">
+										<span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+										<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+									</div>
+									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="editFrm_CreateTime" name="CreateTime" placeholder="创建时间">
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<button class="btn btn-default" data-dismiss="modal" type="button">关闭</button>
+							<button class="btn btn-warning" type="reset">重置</button>
+							<button id='editFrm_btn_submit' class="btn btn-primary" type="button">保存</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+
+		<div class="modal fade" id="delConfirmModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title"><b>警告</b></h4>
+					</div>
+					<div class="modal-body">
+						<p>你确认执行该删除操作吗？</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+						<button type="button" class="btn btn-primary" id="delConfirmModal_btn_submit">确认</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
+
+		<div class="modal fade" id="delAlertModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title"><b>提示</b></h4>
+					</div>
+					<div class="modal-body">
+						<p>请选择需要删除的记录！</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
+
+		<div class="modal fade" id="editAlertModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title"><b>提示</b></h4>
+					</div>
+					<div class="modal-body">
+						<p>请选择一条需要编辑的记录！</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
+
 		<script type="text/javascript" src="${cdn}/jquery/2.0.2/jquery.min.js"></script>
 		<script type="text/javascript" src="${cdn}/bootstrap/3.0.3/dist/js/bootstrap.js"></script>
         <script type="text/javascript" src="${cdn}/underscore/1.5.1/underscore.min.js"></script>
@@ -158,6 +275,79 @@
 
 			$('#addFrm_btn_submit').click(function(){
 				$('#addFrm').olxForm('submit', function(responseText){
+					if(responseText.code){
+						if(300 === responseText.code){
+							top.location.href = '/manage/user/login';
+							return;
+						}
+					}
+
+					if(responseText.success){
+						location.reload();
+					}else{
+						alert(responseText.msg);
+					}
+				});
+			});
+
+			$("#btn_edit").click(function(){
+				var vals = $("#table1").olxGrid("getCheckedRowsValue", 1);
+				if(1 !== vals.length) return $("#editAlertModal").modal();
+
+				$.ajax({
+					url: vals[0] +'.do',
+					type: "POST",
+					dataType: "json"
+				}).done(function(responseText) {
+					if(300 === responseText.code) return top.location.href = '/manage/user/login';
+					if(!responseText.success) return alert(responseText.msg);
+
+					$("#editModal").modal();
+
+					var data = responseText.data;
+					$('#editFrm_Id').val(vals[0]);
+					$('#editFrm_RoleName').val(data[0].RoleName);
+					$('#editFrm_RoleDesc').val(data[0].RoleDesc);
+					$('#editFrm_shadow_StartTime').val(data[1].sStartTime);
+					$('#editFrm_shadow_EndTime').val(data[1].sEndTime);
+					$('#editFrm_shadow_CreateTime').val(data[1].sCreateTime);
+				});
+			});
+
+			$("#delConfirmModal").on("show.bs.modal", function (e) {
+				var vals = $("#table1").olxGrid("getCheckedRowsValue", 1);
+				if(!vals.length) {
+					$("#delAlertModal").modal();
+					return e.preventDefault();
+				}
+			})
+
+			/* 绑定删除按钮，弹出提示对话框或确认对话框 */
+			$("#btn_del").click(function(){
+				$("#delConfirmModal").modal();
+			});
+
+			$('#delConfirmModal_btn_submit').click(function(){
+				var selIds = $("#table1").olxGrid("getCheckedRowsValue", 1);
+				if(!selIds.length) return;
+
+				$.ajax({
+					url: 'del.do',
+					type: "POST",
+					dataType: "json",
+					data: {
+						data: JSON.stringify({ Ids: selIds })
+					}
+				}).done(function(responseText) {
+					if(300 === responseText.code) return top.location.href = '/manage/user/login';
+					if(!responseText.success) return alert(responseText.msg);
+					location.reload();
+				}).complete(function(){
+				});
+			});
+
+			$('#editFrm_btn_submit').click(function(){
+				$('#editFrm').olxForm('submit', function(responseText){
 					if(responseText.code){
 						if(300 === responseText.code){
 							top.location.href = '/manage/user/login';
