--- a/web/views/manage/module/Index.html
+++ b/web/views/manage/module/Index.html
@@ -170,7 +170,7 @@
 										<span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
 										<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
 									</div>
-									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="editFrm_CreateTime" placeholder="创建时间">
+									<input type="hidden" data-olx-type="olx.form.input" class="form-control" id="editFrm_CreateTime" name='CreateTime' placeholder="创建时间">
 								</div>
 							</div>
 						</div>
