--- a/web/views/manage/user/Index.html
+++ b/web/views/manage/user/Index.html
@@ -39,6 +39,11 @@
 						</div>
 						<div class="panel-body">
 							<form class="form-inline" role="form">
+								<div class="checkbox">
+									<label>
+										<input type="checkbox"> 回收站
+									</label>
+								</div>
 								<div class="form-group">
 									<input type="text" class="form-control" id="inputEmail3" placeholder="用户名称">
 								</div>
@@ -71,10 +76,13 @@
 									<th class="olx-table-th-center"><input type="checkbox" title="全选/取消"></th>
 									<th>用户名</th>
 									<th>密码</th>
+									<th>昵称</th>
 									<th>性别</th>
+									<th>最大设备数</th>
 									<th>级别</th>
 									<th>出生日期</th>
 									<th>注册时间</th>
+									<th>状态</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -83,10 +91,13 @@
 									<td class="olx-table-td-center"><input type="checkbox" value="$user.Id"></td>
 									<td>$user.UserName</td>
 									<td>$user.UserPass</td>
+									<td></td>
 									<td>$user.sSex</td>
+									<td>3</td>
 									<td>$user.Lv</td>
 									<td>${user.sBirthday}</td>
 									<td>${user.sRegTime}</td>
+									<td>启用</td>
 								</tr>
 								#end
 							</tbody>
