--- a/web/views/manage/user/Index.html
+++ b/web/views/manage/user/Index.html
@@ -74,7 +74,7 @@
 							</div>
 						    <div class="navbar-btn navbar-right hide-xs">
 								<div class="btn-group">
-									<button type="button" class="btn btn-info olx-glyphicon glyphicon-trash olx-glyphicon-btn">查看回收站</button>
+									<button type="button" class="btn btn-success olx-glyphicon glyphicon-trash olx-glyphicon-btn">查看回收站</button>
 								</div>
 							</div>
  						</div>
