--- a/web/views/manage/user/Index.html
+++ b/web/views/manage/user/Index.html
@@ -42,18 +42,29 @@
 						<div class="panel-body">
 							<form class="form-inline" role="form" onsubmit='return false;'>
 								<div class="form-group">
-									<input type="text" class="form-control" id="inputEmail3" placeholder="用户名称">
+									<input type="text" class="form-control" id="inputEmail3" placeholder="用户名">
 								</div>
 								<div class="form-group">
 									<select class="form-control" id="certificate">
+										<option value="">性别</option>
+										<option value="1">男</option>
+										<option value="2">女</option>
+										<option value="3">未知</option>
+									</select>
+								</div>
+								<div class="form-group">
+									<select class="form-control" id="certificate">
+										<option value="">级别</option>
 										<option value="1">级别1</option>
 										<option value="2">级别2</option>
 									</select>
 								</div>
 								<div class="form-group">
 									<select class="form-control" id="certificate">
-										<option value="1">启用</option>
-										<option value="2">禁用</option>
+										<option value="">状态</option>
+										<option value="0">未激活</option>
+										<option value="1">邮箱</option>
+										<option value="2">短信</option>
 									</select>
 								</div>
 								<button type="submit" class="btn btn-default olx-glyphicon glyphicon-search olx-glyphicon-btn">查询</button>
@@ -84,7 +95,8 @@
 								<tr>
 									<th class="olx-table-th-center"><input type="checkbox" title="全选/取消"></th>
 									<th>用户名</th>
-									<th>密码</th>
+									<th>明文</th>
+									<th>密文</th>
 									<th>昵称</th>
 									<th>性别</th>
 									<th>最大设备数</th>
@@ -99,14 +111,15 @@
 								<tr>
 									<td class="olx-table-td-center"><input type="checkbox" value="$user.Id"></td>
 									<td>$user.UserName</td>
+									<td>$user.SecretPass</td>
 									<td>$user.UserPass</td>
-									<td></td>
+									<td>$user.Nickname</td>
 									<td>$user.sSex</td>
-									<td>3</td>
+									<td>$user.MaxDeviceNum</td>
 									<td>$user.Lv</td>
 									<td>${user.sBirthday}</td>
 									<td>${user.sRegTime}</td>
-									<td>启用</td>
+									<td>${user.sStatus}</td>
 								</tr>
 								#end
 							</tbody>
