--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -23,13 +23,7 @@
                     <form id="registerForm" role="form" onsubmit="return false;">
                         <h3>新用户注册</h3>
                         <div class="form-group">
-                            <input type="text" id="userName" name="UserName" class="form-control" placeholder="用户名">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" id="userPass" name="UserPass" class="form-control" placeholder="密码">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" id="userPass2" class="form-control" placeholder="密码确认">
+                            <input type="text" id="userName" name="UserName" class="form-control" placeholder="example@example.com">
                         </div>
                         <button id="btn_register" type="button" class="btn btn-primary">注册</button>
                         <button type="button" class="btn btn-danger" onclick="history.back()">返回</button>
