--- a/web/views/manage/manager/UserList.html
+++ b/web/views/manage/manager/UserList.html
@@ -3,14 +3,9 @@
 		<tr>
 			<th class="olx-table-th-center"><input type="checkbox" title="全选/取消"></th>
 			<th>用户名</th>
-			<th>明文</th>
-			<th>密文</th>
-			<th>昵称</th>
+			<th>密码</th>
 			<th>性别</th>
-			<th>级别</th>
-			<th>出生日期</th>
-			<th>注册时间</th>
-			<th>状态</th>
+			<th>创建时间</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -18,14 +13,9 @@
 		<tr>
 			<td class="olx-table-td-center"><input type="checkbox" value="$user.Id"></td>
 			<td>$user.UserName</td>
-			<td>$user.SecretPass</td>
 			<td>$user.UserPass</td>
-			<td>$user.Nickname</td>
 			<td>$user.sSex</td>
-			<td>$user.Lv</td>
-			<td>${user.sBirthday}</td>
-			<td>${user.sRegTime}</td>
-			<td>${user.sStatus}</td>
+			<td>${user.sCreateTime}</td>
 		</tr>
 		#end
 	</tbody>
