--- a/web/views/manage/user/Index.html
+++ b/web/views/manage/user/Index.html
@@ -18,7 +18,7 @@
 		<div class="navbar navbar-fixed-top" role="navigation">
 			<ul class="breadcrumb">
 				<li>当前位置：<div class="glyphicon glyphicon-home"></div> 首页</li>
-				<li class="active">系统管理</li>
+				<li class="active">业务系统</li>
 				<li><a href="javascript:;" onclick="location.reload()">用户管理</a></li>				
 			</ul>
 		</div>
@@ -50,13 +50,6 @@
 										<option value="1">男</option>
 										<option value="2">女</option>
 										<option value="3">未知</option>
-									</select>
-								</div>
-								<div class="form-group">
-									<select class="form-control" id="certificate">
-										<option value="">级别</option>
-										<option value="1">级别1</option>
-										<option value="2">级别2</option>
 									</select>
 								</div>
 								<div class="form-group">
